--- a/extra.css
+++ b/extra.css
@@ -7,3 +7,4 @@ p{ font-size:19px; }
 .contact-link{ color:#333; }
 .contact-link:hover{ color:#ED683F; }
 .menu-bar{ padding-top: 25px; }
+.table td{ border:none !important; }
