Set C language in center of div.

--- a/extra.css
+++ b/extra.css
@@ -12,3 +12,4 @@ hr { border-top: 1px solid #e5e5e5 !important;}
 .btn-xing { color: #ffffff; background-color: #B0D400; border-color: transparent; }
 .btn-linkedin { color: #ffffff; background-color: #1F88BE; border-color: transparent; }
 .profile-img { width:100%; }
+.center { text-align:center; }
