--- a/extra.css
+++ b/extra.css
@@ -2,7 +2,7 @@ body, a, .contact-link{ color: #525E61 !important; }
 .title{ font-family: 'Rochester', cursive; color: #525E61 !important; }
 .right-border { border-right: 1px solid #E5E5E5; }
 .activity-header{ color: #2CCC9B; font-family: 'Baloo Bhaina', cursive; font-size: 25px; padding-top:25px !important; }
-.center div{ text-align: center; }
+.center, .center div{ text-align: center; }
 .menu-bar{ padding-top: 25px; }
 .table td{ border:none !important; }
 .table { margin-bottom: 0 !important; }
@@ -13,7 +13,6 @@ hr { border-top: 1px solid #D7DCDD !important; margin:0 !important; }
 .btn-xing { color: #FFF !important; background-color: #B0D400; border-color: transparent; }
 .btn-linkedin { color: #FFF !important; background-color: #1F88BE; border-color: transparent; }
 .profile-img { width:100%; }
-.center { text-align: center; }
 .left { text-align: left; }
 .right { text-align: right; }
 .well { background-color: #F9FAFA !important; border: 1px solid #D7DCDD !important; box-shadow: 0 3px 9px #E5E5E5; padding:0 !important; }
