--- a/extra.css
+++ b/extra.css
@@ -1,7 +1,7 @@
 body, a, .contact-link{ color: #525E61 !important; }
 .title{ font-family: 'Rochester', cursive; color: #525E61 !important; }
 .right-border { border-right: 1px solid #E5E5E5; }
-.activity-header{ color: #2CCC9B; font-family: 'Baloo Bhaina', cursive; font-size: 25px; padding-top:25px !important; }
+.activity-header{ color: #2CCC9B; font-family: 'Baloo Bhaina', cursive; font-size: 25px; padding-top: 25px !important; text-align: center; }
 .center, .center div{ text-align: center; }
 .menu-bar{ padding-top: 25px; }
 .table td{ border:none !important; }
@@ -18,7 +18,7 @@ hr { border-top: 1px solid #D7DCDD !important; margin:0 !important; }
 .well { background-color: #F9FAFA !important; border: 1px solid #D7DCDD !important; box-shadow: 0 3px 9px #E5E5E5; padding:0 !important; }
 .navbar-default{ background-color: #F9FAFA !important; border: 1px solid #D7DCDD !important; box-shadow: 0 3px 9px #E5E5E5; }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover { background-color: #EFEFEF !important; }
-.navbar-item-fill>a { padding-right: 37px !important; }
+/*.navbar-item-fill>a { padding-right: 37px !important; }*/
 .padding-s1 { padding:20px; }
 .right-border{ border-right:1px solid #D7DCDD; }
 .btn-success { background-color: #2CCC9B !important; color: #FFF !important; border: none !important; }
