--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
       {{page.title}}
     </a>
   </h3>
-  <time datetime="{{page.date}}">{{page.date | date: "%Y-%m-%d"}}</time>
+  <time class="post-date" datetime="{{page.date}}">{{page.date | date: "%Y-%m-%d"}}</time>
   <p>
     {{content}}
     <a href="{{site.baseurl}}{{page.url}}" title="read more">Read more</a>
