--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-extra justify-content-between">
   <div>
-  <a class="navbar-brand" href="{{site.baseurl}}">Morteza N.Alamdari</a>
+  <a class="navbar-brand" href="{{site.url}}">Morteza N.Alamdari</a>
   <span class="navbar-text">{{site.tagline}}</span>
   </div>
   <ul class="navbar-nav float-right float-md-right">
