update keywords part.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}</title>
     <meta name="author" content="{{site.author}}">
     <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
-    <meta name="keywords" content="{% if page.keywords %}{% for k in page.keywords %}{{k}},{% endfor %}{% else %}{{site.keywords}}{% endif %}">
+    <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
     <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
