add google analytics api.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
     <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109061332-1"></script>
+    <script src="{{site.baseurl}}/inc/js/gtag.js"></script>
   </head>
   <body>
     <div class="container">
