comment a head tag.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="author" content="{{site.author}}">
     <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
     <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
-    <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
+    <!--<link rel="canonical" href="{{site.baseurl}}{{page.url}}">-->
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
