--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
     <meta name="author" content="{{site.author}}">
     <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
     <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
-    <!--<link rel="canonical" href="{{site.baseurl}}{{page.url}}">-->
+    <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109061332-1"></script>
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-109061332-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
