--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109061332-1"></script>
+    <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109061332-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-109061332-1');
-    </script>
+    </script>-->
   </head>
   <body>
     <div class="container">
