--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-extra justify-content-between">
+<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-extra justify-content-between">
   <div>
   <a class="navbar-brand" href="{{site.url}}">Morteza N.Alamdari</a>
   <span class="navbar-text">{{site.tagline}}</span>
