--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
   </p>
   <div class="keywords">
     {% for keyword in page.keywords %}
-    <label class="badge badge-secondary">{{keyword}}</label>
+    <label class="badge badge-info">{{keyword}}</label>
     {% endfor %}
   </div>
 </article>
