--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,23 @@
 ---
 layout: default
 ---
-<article class="posts">
-  <h3>
-    <a href="{{page.url | prepend: site.baseurl}}" rel="bookmark" title="Permanent link to {{site.baseurl}}{{post.url}}">
-      {{page.title}}
-    </a>
-  </h3>
-  <time class="post-date" datetime="{{page.date}}">{{page.date | date: "%Y-%m-%d"}}</time>
-  <p>
-    {{content}}
-  </p>
-  <div class="keywords">
-    {% for keyword in page.keywords %}
-    <label class="badge badge-info">{{keyword}}</label>
-    {% endfor %}
+<div class="card">
+  <div class="card-body">
+    <article class="posts">
+      <h4 class="card-title">
+	<a href="{{page.url | prepend: site.baseurl}}" rel="bookmark" title="Permanent link to {{site.baseurl}}{{post.url}}">
+	  {{page.title}}
+	</a>
+      </h4>
+      <time class="post-date" datetime="{{page.date}}">{{page.date | date: "%Y-%m-%d"}}</time>
+      <p>
+	{{content}}
+      </p>
+      <div class="keywords">
+	{% for keyword in page.keywords %}
+	<label class="badge badge-info">{{keyword}}</label>
+	{% endfor %}
+      </div>
+    </article>
   </div>
-</article>
+</div>
