change layouts and theme.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<article>
 <div class="card">
   <div class="card-body">
     <article class="posts">
@@ -21,3 +22,4 @@ layout: default
     </article>
   </div>
 </div>
+</article>
