--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,13 @@
 ---
 layout: default
 ---
-<h1>{{page.title}}</h1>
-<div>
-  {{content}}
-</div>
- 
+<article>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">{{page.title}}</h4>
+      <div>
+	{{content}}
+      </div>
+    </div>
+  </div>
+</article>
