--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-extra justify-content-between">
-  <div>
-  <a class="navbar-brand" href="{{site.url}}">Morteza N.Alamdari</a>
-  <span class="navbar-text">{{site.tagline}}</span>
-  </div>
-  <ul class="navbar-nav float-right float-md-right">
-    <li>
-      <a class="nav-link" href="{{site.baseurl}}/about/">
-	About
-      </a>
-    </li>
-    <li>
-      <a class="nav-link" href="{{site.baseurl}}/contact/">
-	Contact
-      </a>
-    </li>
+<div class="tiny-navbar">
+  <ul>
+    <li><a href="{{site.baseurl}}/">Morteza N.Alamdari</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="{{site.baseurl}}/about/">About</a></li>
+    <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
   </ul>
-</nav>
+</div>
