--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -15,7 +15,7 @@ body {
 }
 .tiny-navbar {
     font: 16px 'Roboto Condensed', sans-serif;
-    background-color: #333;
+    background-color: #607d8b;
     display: block;
     height: 35px;
     font-weight: 400;
