--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -52,9 +52,8 @@ body {
     color: #333;
 }
 .post .read-more {
-    border: 1px solid #333;
     color: #FFF;
-    background-color: #333;
+    background-color: #F44336;
     padding: 0 5px 0 5px;
     text-decoration: none;
 }
