--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -77,8 +77,8 @@ div.highlighter-rouge {
 .keywords .badge {
     font: 14px 'Roboto', sans-serif;
     padding: 3px;
-    background-color: #A0A0A0;
-    color: #FFF;
+    background-color: #E5E5E5;
+    color: #607d8b;
 }
 footer {
     padding: 5px;
@@ -91,4 +91,35 @@ time {
     font-size: small;
     font-style: italic;
     color: #333;
+}
+.contact-table {
+  margin: auto;
+}
+.contact-td-icon ,
+.contact-tr-icon td {
+  background-color: #E5E5E5;
+  color: #607d8b;
+  padding: 20px 40px;
+  margin: 5px;
+  font-size: 80px;
+}
+.contact-tr-icon td a {
+  text-decoration: none;
+  color: #607d8b;
+}
+.contact-tr-link td,
+.contact-tr-link td a {
+  text-align: center;
+  text-decoration: none;
+  color: #333;
+  font: 15px 'Roboto Condensed', sans-serif;
+  font-weight: 700;
+}
+ul.contact-info {
+  margin: 0;
+  padding: 0;
+}
+ul.contact-info li {
+  margin: 20px;
+  font: 14px 'Roboto', sans-serif;
 }
