--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
       {{page.title}}
     </a>
   </strong>
-  <time datetime="{{page.date}}">{{page.date | date: "%Y-%m-%d"}}</time>
+  <time datetime="{{page.date}}">{{page.date | date: "%a %b %m, %Y"}}</time>
   <div class="post-body">
     {{content}}
   </div>
