--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="tiny-navbar">
   <ul>
     <li><a href="{{site.baseurl}}/">Morteza N.Alamdari</a></li>
-    <li><a href="#">Projects</a></li>
+    <li><a href="{{site.baseurl}}/projects/">Projects</a></li>
     <li><a href="{{site.baseurl}}/about/">About</a></li>
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
   </ul>
