--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,13 @@
     <meta name="author" content="{{site.author}}">
     <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
     <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
+    <link rel="shortcut icon" href="{{site.baseurl}}favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{site.baseurl}}favicon.ico" type="image/x-icon">
     <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
     {% if page.extra_css %}<link rel="stylesheet" href="{{site.baseurl}}/inc/css/{{page.extra_css}}">{% endif %}
+    {% if page.extra_js %}{% for js_file in page.extra_js %}<script src="{{site.baseurl}}/inc/js/{{js_file}}"></script>
+    {% endfor %}{% endif %}
   </head>
   <body>
     {% include header.html %}
