Update alert theme.

--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -168,6 +168,6 @@ ul.contact-info li {
 .alert {
   padding: 10px;
   /*box-shadow: 0 0 2px #ff5722;*/
-  border: 1px solid #ff5722;
+  border: 1px solid #00bcd4;
   margin: 10px 0;
 }
