--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,4 +5,7 @@
     <li><a href="{{site.baseurl}}/about/">About</a></li>
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
   </ul>
+  <ul class="right">
+    <li><a href="{{site.baseurl}}/feed.xml">RSS</a></li>
+  </ul>
 </div>
