--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -72,6 +72,7 @@ strong {
     background-color: #ff5722;
     padding: 0 5px 0 5px;
     text-decoration: none;
+    white-space: nowrap;
 }
 div.highlighter-rouge,
 code.highlighter-rouge {
