--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -29,7 +29,7 @@ strong {
 }
 .tiny-navbar {
     font: 16px 'Roboto Condensed', sans-serif;
-    background-color: #3e3e3e;
+    background-color: #23262E;
     display: block;
     height: 35px;
     font-weight: 400;
@@ -61,7 +61,7 @@ strong {
     font-weight: 700;
 }
 .post .post-title a {
-    color: #3e3e3e;
+    color: #23262E;
     text-decoration: none;
 }
 .post .post-body {
@@ -111,14 +111,14 @@ time {
 .contact-td-icon ,
 .contact-tr-icon td {
   /* border: 1px solid #ff5722; */
-  color: #3e3e3e;
+  color: #23262E;
   padding: 5px 25px;
   margin: 5px;
   font-size: 50px;
 }
 .contact-tr-icon td a {
   text-decoration: none;
-  color: #3e3e3e;
+  color: #23262E;
 }
 .contact-tr-link td,
 .contact-tr-link td a {
@@ -153,7 +153,7 @@ ul.contact-info li {
   text-align: left;
   padding: 5px;
   background: #e5e5e5;
-  color: #3e3e3e;
+  color: #23262E;
   font-weight: 500;
 }
 .projects-table tr:nth-child(event) {
