--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,9 @@
 All rights reserved &copy;
+
+{% if paginator %}
+<div class="post-paginator">
+    <a href="{{paginator.previous_page_path}}" class="page-link">Prev</a>
+    <span>{{paginator.page}} / {{paginator.total_pages}}</span>
+    <a href="{{paginator.next_page_path}}" class="page-link">Next</a>
+</div>
+{% endif %}
