Add share links. Update layout.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,10 @@ layout: default
     </a>
   </strong>
   <time datetime="{{page.date}}">{{page.date | date: "%a, %d %b %Y"}}</time>
+
+  <a href="https://twitter.com/intent/tweet?text={{page.title}}&url={{site.baseurl}}{{post.url}}&via={{site.twitter_username}}&related={{site.twitter_username}}" rel="nofollow" target="_blank" title="Share on Twitter" class="post-share-link"><i class="fa fa-twitter"></i></a>
+  <a href="https://plus.google.com/share?url={{site.baseurl}}{{post.url}}" rel="nofollow" target="_blank" title="Share on Google+" class="post-share-link"><i class="fa fa-google-plus"></i></a>
+  
   <div class="post-body">
     {{content}}
   </div>
