--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="{{site.baseurl}}/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
     <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/inc/css/font-awesome.min.css">
     {% if page.extra_css %}<link rel="stylesheet" href="{{site.baseurl}}/inc/css/{{page.extra_css}}">{% endif %}
     {% if page.extra_js %}{% for js_file in page.extra_js %}<script src="{{site.baseurl}}/inc/js/{{js_file}}"></script>
     {% endfor %}{% endif %}
