--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -84,6 +84,11 @@ strong {
     text-decoration: none;
     white-space: nowrap;
 }
+.post .post-share-link {
+    color: #FFF;
+    background-color: #00BCD4;
+    padding: 2px 5px;
+}
 div.highlighter-rouge,
 code.highlighter-rouge {
     border: 1px solid #e5e5e5;
