--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed:400,700');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:500');
 body {
     width: 80%;
     margin: auto;
     padding: 0;
-    font: 14px 'Roboto', sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family:'Roboto Condensed', sans-serif;
-    font-weight: 700;
+    font-family: 'Quicksand', sans-serif;
 }
 strong {
-  font: 14px 'Roboto', sans-serif;
-  font-weight: 500;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
 }
 .container {
     border: 1px solid #efefef;
@@ -57,15 +57,14 @@ strong {
     margin-bottom: 10px;
 }
 .post .post-title {
-    font: 15px 'Roboto Condensed', sans-serif;
-    font-weight: 700;
+    text-decoration: underline;
 }
 .post .post-title a {
     color: #23262E;
     text-decoration: none;
 }
 .post .post-body {
-    color: #333;
+    color: #23262E;
 }
 .post .read-more {
     color: #FFF;
@@ -93,9 +92,9 @@ div.highlighter-rouge,
 code.highlighter-rouge {
     border: 1px solid #e5e5e5;
     font-size: initial;
-    /*box-shadow: 0 0 4px #e5e5e5;*/
     background-color: #e5e5e5;
     color: #333;
+    font-family: 'Quicksand', sans-serif;
 }
 div.highlighter-rouge {
     padding-left: 10px;
@@ -109,8 +108,8 @@ div.highlighter-rouge {
 footer {
     padding: 5px;
     margin: 10px;
-    font-size: 12px;
-    font: 15px 'Roboto Condensed', sans-serif;
+    font-size: 15px;
+    font-family: 'Quicksand', sans-serif;
     color: #a0a0a0;
 }
 time {
@@ -125,7 +124,6 @@ time {
 }
 .contact-td-icon ,
 .contact-tr-icon td {
-  /* border: 1px solid #ff5722; */
   color: #23262E;
   padding: 5px 25px;
   margin: 5px;
@@ -140,7 +138,7 @@ time {
   text-align: center;
   text-decoration: none;
   color: #333;
-  font: 15px 'Roboto Condensed', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-weight: 700;
 }
 ul.contact-info {
@@ -186,7 +184,6 @@ ul.contact-info li {
 }
 .alert {
   padding: 10px;
-  /*box-shadow: 0 0 2px #ff5722;*/
   border: 1px solid #00bcd4;
   margin: 10px 0;
 }
