--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed:400,700');
+/*@import url('https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed:400,700');*/
 @import url('https://fonts.googleapis.com/css?family=Quicksand:500');
 body {
     width: 80%;
@@ -28,10 +28,10 @@ strong {
     margin: auto;
 }
 .tiny-navbar {
-    font: 16px 'Roboto Condensed', sans-serif;
+    font: 16px 'Quicksand', sans-serif;
     background-color: #23262E;
     display: block;
-    height: 35px;
+    height: 33px;
     font-weight: 400;
 }
 .tiny-navbar ul {
