Add RSS icon on top menu.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,6 @@
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
   </ul>
   <ul class="right">
-    <li><a href="{{site.baseurl}}/feed.xml">RSS</a></li>
+    <li><a href="{{site.baseurl}}/feed.xml"><i class="fa fa-rss"></i> RSS</a></li>
   </ul>
 </div>
