--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <div class="tiny-navbar">
   <ul>
-    <li><a href="{{site.baseurl}}/">Morteza N.Alamdari</a></li>
-    <li><a href="{{site.baseurl}}/projects/">Projects</a></li>
-    <li><a href="{{site.baseurl}}/about/">About</a></li>
-    <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
+    <li><a href="{{site.baseurl}}/" title="Home">Morteza N.Alamdari</a></li>
+    <li><a href="{{site.baseurl}}/projects/" title="Projects">Projects</a></li>
+    <li><a href="{{site.baseurl}}/about/" title="About">About</a></li>
+    <li><a href="{{site.baseurl}}/contact/" title="Contact">Contact</a></li>
   </ul>
   <ul class="right">
-    <li><a href="{{site.baseurl}}/tags/">Search</a></li>
-    <li><a href="{{site.baseurl}}/feed.xml"><i class="fa fa-rss"></i> RSS</a></li>
+    <li><a href="{{site.baseurl}}/tags/" title="Search">Search</a></li>
+    <li><a href="{{site.baseurl}}/feed.xml" title="RSS"><i class="fa fa-rss"></i> RSS</a></li>
   </ul>
 </div>
