--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,34 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}</title>
-    <meta name="author" content="{{site.author}}">
-    <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
-    <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
-    <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="{{site.baseurl}}/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
-    <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/inc/css/font-awesome.min.css">
-    {% if page.extra_css %}<link rel="stylesheet" href="{{site.baseurl}}/inc/css/{{page.extra_css}}">{% endif %}
-    {% if page.extra_js %}{% for js_file in page.extra_js %}<script src="{{site.baseurl}}/inc/js/{{js_file}}"></script>
-    {% endfor %}{% endif %}
-  </head>
-  <body>
-    {% include header.html %}
-    <div class="container">
-      {{content}}
-      <footer>
-	       {% include footer.html %}
-      </footer>
-    </div>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}</title>
+        <meta name="author" content="{{site.author}}">
+        <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
+        <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
+        <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="{{site.baseurl}}/favicon.ico" type="image/x-icon">
+        <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
+        <link rel="stylesheet" href="{{site.baseurl}}/inc/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{site.baseurl}}/inc/css/main.css">
+        <link rel="stylesheet" href="{{site.baseurl}}/inc/css/font-awesome.min.css">
+        {% if page.extra_css %}<link rel="stylesheet" href="{{site.baseurl}}/inc/css/{{page.extra_css}}">{% endif %}
+        {% if page.extra_js %}{% for js_file in page.extra_js %}<script src="{{site.baseurl}}/inc/js/{{js_file}}"></script>
+        {% endfor %}{% endif %}
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 sidebar">
+                    {% include sidebar.html %}
+                </div>
+                <div class="col-md-10 body">
+                    <div class="page-top-header">
+                        <h3>{{page.page_menu}}</h3>
+                    </div>
+                    {{content}}
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
