--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -1,233 +1,209 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:500');
-@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
-body {
-    width: 80%;
-    margin: auto;
+/* main structure */
+html, body {
+    height: 100%;
+}
+div.sidebar {
     padding: 0;
-    font-family: 'Quicksand', sans-serif;
+    min-height: 100%;
 }
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Quicksand', sans-serif;
+div.body {
+    border-left: 1px solid #eee;
+    padding: 0;
 }
-strong {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 500;
-}
-.container {
-    border: 1px solid #efefef;
-    border-top: none;
-}
-.screenshot {
-    border-radius: 5px;
-    box-shadow: 2px 5px 47px #333;
-    margin: 10px;
-}
-.center {
+/* end main structure */
+
+/* logo section */
+div.logo-section {
     text-align: center;
-    width: 77%;
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+    background-color: #fff;
+}
+div.profile-picture {
+    background-image: url("../img/profile.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
     margin: auto;
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
 }
-.tiny-navbar {
-    font: 16px 'Quicksand', sans-serif;
-    background-color: #454054;
-    display: block;
-    height: 33px;
-    font-weight: 400;
-}
-.tiny-navbar ul {
+div.logo-section h5 {
+    font-weight: bold;
     margin: 0;
     padding: 0;
+    color: #343a40;
 }
-.tiny-navbar ul li {
-    float: left;
-    list-style: none;
-    padding: 6px;
-    margin-right: 5px;
+small.profession {
+    font-weight: bold;
+    color: #343a40;
 }
-.tiny-navbar ul li a {
-    color: #FFF;
-    text-decoration: none;
-}
-.tiny-navbar .right {
-    float: right;
-}
-.post {
-    border-bottom: 1px solid #efefef;
+/* end logo section */
+
+/* search box */
+div.search-box {
     padding: 10px;
-    margin-bottom: 10px;
 }
-.post-title {
-    background-color: #F2F2F2;
-    padding: 2px;
+div.search-box a {
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ced4da;
+    text-align: left;
+    color: #868e96;
 }
+div.search-box a:hover {
+    background-color: #fff;
+    color: #868e96;
+}
+/* end search box */
+
+/* left menu section */
+.left-menu {
+    background: linear-gradient(#f5f6fa, #fff);
+}
+.list-group-item {
+    border: none !important;
+    border-radius: 0 !important;
+    border-bottom: 1px solid #efefef !important;
+    background-color: transparent !important;
+}
+.list-group-item.active {
+    background-color: #e0e7ab !important;
+}
+.list-group-item a {
+    color: #333;
+}
+/* end left menu section */
+
+/* copyright section */
+div.copyright {
+    margin-top: 10px;
+    padding: 10px;
+    color: #A0A0A0;
+    text-align: center;
+}
+/* end copyright section */
+
+/* post list section */
+.post {
+    padding: 10px;
+    margin: 10px 0;
+}
+.post-border {
+    border-bottom: 1px solid #e9ecef;
+}
+.badge-light time {
+    color: #A0A0A0;
+}
+a.read-more {
+    color: #e96b56;
+    white-space: nowrap;
+}
+.pagination-box {
+    padding: 10px;
+}
+/* end post list section */
+
+/* post structure */
+.post-title,
 .post-title a {
-    color: #23262E;
+    background-color: #f8f9fa;
+    color: #000;
+    border-bottom: 1px solid #a0a0a0;
     text-decoration: none;
+    display: inline;
 }
-.post-body {
-    color: #23262E;
-    line-height: 25px;
-    margin-top: 5px;
+.share-links {
+    display: inline;
+    margin-left: 5px;
 }
+.share-links .share-btn {
+    color: #a2cfa5;
+    border: 1px solid #a2cfa5;
+    padding: 0 10px;
+}
+pre {
+    border: 1px solid #e2e2e2;
+    border-radius: 4px;
+    display: block;
+    padding: 10px;
+}
+.badge-tag {
+    color: #fff;
+    background-color: #beaea1;
+    font-size: 90%;
+}
+.badge-tag:hover {
+    color: #fff !important;
+}
+/* end post structure */
+
+/* page structure */
+.page-top-header h3 {
+    margin-left: 10px;
+    font-size: 1.75rem;
+    background-color: #5eab99;
+    display: inline;
+    border-radius: 0 0 4px 4px;
+    padding: 5px 5px;
+    color: #fff;
+}
+/* end page structure */
+
+/* table classes */
+table.td-0 {
+    width: 3%;
+}
+table.td-1 {
+    width: 10%;
+}
+table.td-2 {
+    width: 20%;
+}
+/* end table classes */
+
+/* label/span classes */
+.vertical-center {
+    padding-top: 16px !important;
+}
+/* end label/span classes */
+
+/* card classes */
+.text-white a {
+    color: #fff;
+}
+.card-extra-link {
+    text-align: center;
+    width: 151.5px;
+    display: inline-block;
+}
+/* end card classes */
+
+/* misc classes */
+.center {
+    text-align: center;
+}
+.big-h1 {
+    font-size: 66px;
+}
+.contact-phone-icon {
+    padding-left: 10px;
+}
+/* end misc classes */
+
+/* tag page */
 .color-link {
     color: #FFF;
     padding: 0 5px 2px 5px;
     text-decoration: none;
     white-space: nowrap;
 }
-.read-more {
-    background-color: #F8717D;
-}
 .tag-title {
-    background-color: #EC8298;
+    background-color: #5eab99;
 }
-.post-paginator {
-    float: right;
+.search-highlight,
+.search-highlight a {
+    background-color: #e96b56;
+    color: #fff;
 }
-.post-paginator .page-link {
-    color: #FFF;
-    background-color: #99679E;
-    padding: 0 5px 2px 5px;
-    text-decoration: none;
-    white-space: nowrap;
-}
-.post .post-share-link {
-    color: #FFF;
-    padding: 2px 10px;
-}
-div.highlighter-rouge,
-code.highlighter-rouge {
-    padding: 3px;
-    font-size: initial;
-    background-color: #F2F2F2;
-    color: #333;
-    font-family: 'Quicksand', sans-serif;
-}
-div.highlighter-rouge {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-div.highlight code {
-    font-family: 'Ubuntu Mono', monospace;
-}
-.keywords .badge,
-.keywords .badge a {
-    padding: 3px;
-    background-color: #F2F2F2;
-    color: #A0A0A0;
-    text-decoration: none;
-    margin-right: 3px;
-}
-footer {
-    padding: 5px;
-    margin: 10px;
-    font-size: 15px;
-    font-family: 'Quicksand', sans-serif;
-    color: #a0a0a0;
-}
-time {
-    font-size: small;
-    font-style: italic;
-    color: #333;
-    padding: 0 5px 0 5px;
-}
-.contact-table {
-    margin: auto;
-}
-.contact-td-icon ,
-.contact-tr-icon td {
-    color: #454054;
-    padding: 5px 25px;
-    margin: 5px;
-    font-size: 50px;
-}
-.contact-tr-icon td a {
-    text-decoration: none;
-    color: #454054;
-}
-.contact-tr-link td,
-.contact-tr-link td a {
-    text-align: center;
-    text-decoration: none;
-    color: #333;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 700;
-}
-ul.contact-info {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-ul.contact-info li {
-    margin: 4px;
-    list-style: none;
-}
-.projects-table {
-    width: 100%;
-}
-.projects-table .td-0 {
-    width: 3%;
-}
-.projects-table .td-1 {
-    width: 10%;
-}
-.projects-table .td-2 {
-    width: 20%;
-}
-.projects-table th {
-    text-align: left;
-    padding: 5px;
-    background-color: #F2F2F2;
-    color: #23262E;
-    font-weight: 500;
-}
-.projects-table tr:hover {
-    background-color: #F2F2F2;
-}
-.projects-table tr td {
-    padding: 5px;
-}
-.projects-table tr td a {
-    text-decoration: none;
-    color: #333;
-}
-.alert {
-    padding: 10px;
-    border: 1px solid #99679E;
-    margin: 10px 0;
-}
-blockquote {
-    margin: 0;
-}
-.shared-links {
-    display: inline;
-    padding: 3px;
-}
-.shared-links a {
-    background-color: #99679E;
-}
-.tags {
-    margin: 10px;
-}
-.tags ul {
-    margin: 0;
-    padding: 0px 20px;
-}
-.tags ul li {
-    list-style: none;
-    margin: 10px 0px;
-}
-.search-box {
-    border-bottom: 1px solid #efefef;
-    padding: 30px;
-    text-align: center;
-}
-.search-box input {
-    border: 1px solid #99679E;
-    padding: 10px;
-    margin: 10px;
-    width: 60%;
-}
-.search-highlight {
-    background-color: #FDA381;
-}
+/* end tag page */
