--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-md-10 body">
                     <div class="page-top-header">
-                        <h3>{{page.page_menu}}</h3>
+                        <h4><i class="fa fa-arrow-circle-down"></i> {{page.page_menu}}</h4>
                     </div>
                     {{content}}
                 </div>
