--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,8 @@
         <!-- <li class="list-group-item {% if page.page_menu == 'Resume' %}active{% endif%}"><a href="{{site.baseurl}}/resume/" title="Resume">Resume</a></li> -->
         <li class="list-group-item {% if page.page_menu == 'About' %}active{% endif%}"><a href="{{site.baseurl}}/about/" title="About">About</a></li>
         <li class="list-group-item {% if page.page_menu == 'Contact' %}active{% endif%}"><a href="{{site.baseurl}}/contact/" title="Contact">Contact</a></li>
+        <li class="list-group-item"><a href="{{site.baseurl}}/feed.xml" title="RSS" target="_blank"><i class="fa fa-rss"></i> RSS</a></li>
+        
     </ul>
 </div>
 
