--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,12 @@
 
 <div class="left-menu">
     <div class="search-box">
-        <a href="{{site.baseurl}}/tags/" class="btn btn-block btn-light" title="Search">Search</a>
+        <div class="input-group">
+            <input type="text" id="search_keyword" class="form-control" placeholder="Search">
+            <span class="input-group-btn">
+                <button class="btn btn-secondary" type="button" id="search-btn" title="Go search!" data-toggle="modal"><i class="fa fa-search"></i></button>
+            </span>
+        </div>
     </div>
 
     <ul class="list-group">
@@ -14,10 +19,10 @@
         <li class="list-group-item {% if page.page_menu == 'Articles' %}active{% endif%}"><a href="{{site.baseurl}}/" title="Articles">Articles</a></li>
         <li class="list-group-item {% if page.page_menu == 'Projects' %}active{% endif%}"><a href="{{site.baseurl}}/projects/" title="Projects">Projects</a></li>
         <!-- <li class="list-group-item {% if page.page_menu == 'Resume' %}active{% endif%}"><a href="{{site.baseurl}}/resume/" title="Resume">Resume</a></li> -->
+        <li class="list-group-item {% if page.page_menu == 'Tags' %}active{% endif%}"><a href="{{site.baseurl}}/tags/" title="Tags">Tags</a></li>
         <li class="list-group-item {% if page.page_menu == 'About' %}active{% endif%}"><a href="{{site.baseurl}}/about/" title="About">About</a></li>
         <li class="list-group-item {% if page.page_menu == 'Contact' %}active{% endif%}"><a href="{{site.baseurl}}/contact/" title="Contact">Contact</a></li>
         <li class="list-group-item"><a href="{{site.baseurl}}/feed.xml" title="RSS" target="_blank"><i class="fa fa-rss"></i> RSS</a></li>
-        
     </ul>
 </div>
 
