Add open graph meta tags. Update config and sidebar.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="logo-section">
     <div class="profile-picture"></div>
-    <h5>Morteza Nourelahi Alamdari</h5>
-    <small class="profession">Senior Software Developer</small>
+    <h5>{{site.author}}</h5>
+    <small class="profession">{{site.tagline}}</small>
 </div>
 
 <div class="left-menu">
