--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
         <!-- seo -->
         <meta name="author" content="{{site.author}}">
-        <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
+        <meta name="description" content="{% if page.excerpt %}{{page.excerpt | strip_html | strip_newlines | truncate:150}}{% else %}{{site.description}}{% endif %}">
         <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
         <!-- end seo -->
 
@@ -38,7 +38,7 @@
         <meta property="org:url" content="{{site.url}}"/>
         <meta property="org:type" content="website"/>
         <meta property="org:title" content="{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}"/>
-        <meta property="org:description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}"/>
+        <meta property="org:description" content="{% if page.excerpt %}{{page.excerpt | strip_html | strip_newlines | truncate:150}}{% else %}{{site.description}}{% endif %}"/>
         <meta property="org:img" content="{{site.baseurl}}{% if page.image %}{{page.image}}{% else %}/img/profile.jpg{% endif %}"/>
         <!-- end open graph -->
 
