Update default text color.

--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -1,7 +1,7 @@
 /* main structure */
 html, body {
     height: 100%;
-    color: #414252;
+    color: #39424E; /*#414252;*/
 }
 div.sidebar {
     padding: 0;
