--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
     <div class="search-box">
         <div class="input-group">
             <input type="text" id="search_keyword" class="form-control" placeholder="Search">
-            <span class="input-group-btn">
+            <span class="input-group-append">
                 <button class="btn btn-secondary" type="button" id="search-btn" title="Go search!" data-toggle="modal"><i class="fa fa-search"></i></button>
             </span>
         </div>
