--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -1,6 +1,5 @@
 /* main structure */
-@import url('https://fonts.googleapis.com/css?family=Zilla+Slab:500,700');
-@import url('https://fonts.googleapis.com/css?family=Raleway:500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i');
 html, body {
     height: 100%;
     color: #39424E; /*#414252;*/
@@ -14,8 +13,7 @@ div.body {
     padding: 0;
     font-weight: 500;
     color: #4E4242;
-    /*font-family: 'Zilla Slab', serif;*/
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 17px;
 }
 /* end main structure */
@@ -140,8 +138,7 @@ a.read-more {
     text-decoration: none;
     display: inline;
     font-weight: bold;
-    /*font-family: 'Zilla Slab', serif;*/
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 .share-links {
     display: inline;
